dark mode fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,20 +35,6 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-}
-
 [data-theme="darkMode"] {
   --color-background: var(--vt-c-black);
   --color-background-soft: var(--vt-c-black-soft);
@@ -89,7 +75,7 @@ body {
   width: 100%;
   height:100%;
   margin: 0 auto;
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
   font-weight: normal;
 }
 
